8202950: C2: assert(found_sfpt) failed: no node in loop that's not input to safepoint

Reviewed-by: neliasso, kvn